fixing input placeholde on small devices

--- a/entertainment-web-app/app/components/components.module.css
+++ b/entertainment-web-app/app/components/components.module.css
@@ -91,3 +91,9 @@
         font-size: 2rem;
     }
 }
+
+@media (max-width: 290px) {
+    .searchInput::-webkit-input-placeholder {
+        font-size: 0.9rem;
+    }
+}
